Fix #2809: Improve JSON Row Viewer Truncated Text When JSON Row Viewer Truncated Text, all it would do is put 3 dots and a click would expand the message, but in order for it to be easier for everyone to realize that, the 3 dots have been changed with a "[Show More]"!

--- a/apps/studio/src/assets/styles/components/json-viewer.scss
+++ b/apps/studio/src/assets/styles/components/json-viewer.scss
@@ -174,3 +174,13 @@
     }
   }
 }
+
+.truncatable-value .more {
+  color: #4da6ff; /* Azul clarinho parecido ao do DevTools */
+  font-size: 1rem; /* Letra mais pequena */
+  font-weight: normal; /* Fonte normal, não bold */
+  cursor: pointer;
+  padding-left: 0.25rem;
+  text-decoration: none; /* Sem sublinhado por defeito */
+  user-select: none; /* Não deixa selecionar o texto */
+}
